--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     </header>
     <main>
         <section>
-            <!--
-            <button type="button">Main</button>
-            
-            <button type="Personalities">Personalities</button>
-            -->
+            <!---         
+            <button id="mainButton" type="button">Main</button>            
+            <button id="personButton" type="button">Personalities</button> --->            
             <nav>
                 <ul>
                     <li><a href="https://trevorstubbs.github.io/coolcats/">Main</a></li>
@@ -35,6 +33,8 @@
                 playful and they are the best entertainment. You never need a tv around all you need is a cat with some string.
                 A cat will always be aware of your moods. If you are sad they will come and sit on your lap and purr till you feel better.
             </p>
+            <h5></h5>
+            <script src="app.js" type="text/javascript"></script>   
         </section>
         <br>
         <hr>
@@ -42,6 +42,5 @@
     </main>
     <footer>
         <br>
-        <p>| ©Fablo and Stubbs | Facebook | Instagram | SnapChat |</p>
-
+        <p>| ©Fablo and Stubbs | Facebook | Instagram | SnapChat | <h4></h4><script src="date.js" type="text/javascript"></script>
     </footer>
