--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <link rel="stylesheet" href="style.css" rel="stylesheet">
     </head>
     <header>
-        <h1><strong>Cool Cats</strong></h1>
+        <h1 id="demo"><strong>Cool Cats</strong></h1>
         <hr/>
     </header>
     <main>
         <section>
-            <!---         
-            <button id="mainButton" type="button">Main</button>            
-            <button id="personButton" type="button">Personalities</button> --->            
+                    
+            <button id="mainButton" type="button" onclick="myFunction()">Main</button>            
+            <button id="personButton" type="button" onclick="gotoPerson()">Personalities</button>            
             <nav>
                 <ul>
                     <li><a href="https://trevorstubbs.github.io/coolcats/">Main</a></li>
@@ -43,4 +43,6 @@
     <footer>
         <br>
         <p>| ©Fablo and Stubbs | Facebook | Instagram | SnapChat | <h4></h4><script src="date.js" type="text/javascript"></script>
+            <script src="button.js" type="text/javascript"></script>
     </footer>
+</html>
