--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <section>
                     
-            <button id="mainButton" type="button" onclick="myFunction()">Main</button>            
+            <button id="mainButton" type="button" onclick="myFunction()">Cats say what?</button>            
             <button id="personButton" type="button" onclick="gotoPerson()">Personalities</button>            
             <nav>
                 <ul>
@@ -34,15 +34,17 @@
                 A cat will always be aware of your moods. If you are sad they will come and sit on your lap and purr till you feel better.
             </p>
             <h5></h5>
-            <script src="app.js" type="text/javascript"></script>   
+
         </section>
         <br>
         <hr>
-
     </main>
     <footer>
         <br>
-        <p>| ©Fablo and Stubbs | Facebook | Instagram | SnapChat | <h4></h4><script src="date.js" type="text/javascript"></script>
-            <script src="button.js" type="text/javascript"></script>
+        <p>| ©Fablo and Stubbs | Facebook | Instagram | SnapChat | <h4 id="dateLocation"></h4>
+        </p>
+        <script src="date.js" type="text/javascript"></script>
+        <script src="button.js" type="text/javascript"></script>
+        <script src="agePrompt.js" type="text/javascript"></script>   
     </footer>
 </html>
