--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 playful and they are the best entertainment. You never need a tv around all you need is a cat with some string.
                 A cat will always be aware of your moods. If you are sad they will come and sit on your lap and purr till you feel better.
             </p>
-            <h5></h5>
+            <h5 id="catsAreBetter"></h5>
 
         </section>
         <br>
@@ -45,6 +45,8 @@
         </p>
         <script src="date.js" type="text/javascript"></script>
         <script src="button.js" type="text/javascript"></script>
-        <script src="agePrompt.js" type="text/javascript"></script>   
+        <script src="agePrompt.js" type="text/javascript"></script>  
+        <script src="p5.min.js" type="text/javascript"></script> 
+        <script src="sketch.js" type="text/javascript"></script>
     </footer>
 </html>
