--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <br>
         <p>| ©Fablo and Stubbs | Facebook | Instagram | SnapChat | <h4 id="dateLocation"></h4>
         </p>
+        <div id="sketchHolder"></div>
         <script src="date.js" type="text/javascript"></script>
         <script src="button.js" type="text/javascript"></script>
         <script src="agePrompt.js" type="text/javascript"></script>  
