moved everything to a single js file

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
         <p>| ©Fablo and Stubbs | Facebook | Instagram | SnapChat | <h4 id="dateLocation"></h4>
         </p>
         <div id="sketchHolder"></div>
-        <script src="date.js" type="text/javascript"></script>
+        <!-- <script src="date.js" type="text/javascript"></script>
         <script src="button.js" type="text/javascript"></script>
-        <script src="agePrompt.js" type="text/javascript"></script>  
+        <script src="agePrompt.js" type="text/javascript"></script>   -->
+        <script src="script.js" type="text/javascript"></script>
         <script src="p5.min.js" type="text/javascript"></script> 
         <script src="sketch.js" type="text/javascript"></script>
     </footer>
