--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 playful and they are the best entertainment. You never need a tv around all you need is a cat with some string.
                 A cat will always be aware of your moods. If you are sad they will come and sit on your lap and purr till you feel better.
             </p>
-            <h5 id="catsAreBetter"></h5>
+            <h2 id="catsAreBetter"></h2>
         </section>
         <br>
         <hr>
@@ -41,12 +41,14 @@
         <br>
         <p>| ©Fablo and Stubbs | Facebook | Instagram | SnapChat | <h4 id="dateLocation"></h4>
         </p>
-        <div id="sketchHolder"></div>
+        <div id="sketchHolder" onclick="guessGame()"></div>
+        <p>The Cheshire Cat wants to play a game. (Click Me!)</p>
         <!-- <script src="date.js" type="text/javascript"></script>
         <script src="button.js" type="text/javascript"></script>
         <script src="agePrompt.js" type="text/javascript"></script>   -->
         <script src="script.js" type="text/javascript"></script>
         <script src="p5.min.js" type="text/javascript"></script> 
         <script src="sketch.js" type="text/javascript"></script>
+
     </footer>
 </html>
