--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </table>
         </section>
         <section id="paragraph">
-            <h2>Cats are you best pets!</h2>
+            <h2>Cats are the best pets!</h2>
             <p>
                 You will always want to keep cats in your house. They are the best pest you could possibly want. They are so 
                 playful and they are the best entertainment. You never need a tv around all you need is a cat with some string.
