--- a/index.html
+++ b/index.html
@@ -35,20 +35,19 @@
             <h2 id="catsAreBetter"></h2>
         </section>
         <br>
+        <section id="cheshireCat">
+            <div id="sketchHolder" onclick="guessGame()">
+                <p>The Cheshire Cat wants to play a game. (Click Me!)</p>
+            </div>
+        </section>
         <hr>
     </main>
     <footer>
         <br>
         <p>| ©Fablo and Stubbs | Facebook | Instagram | SnapChat | <h4 id="dateLocation"></h4>
         </p>
-        <div id="sketchHolder" onclick="guessGame()"></div>
-        <p>The Cheshire Cat wants to play a game. (Click Me!)</p>
-        <!-- <script src="date.js" type="text/javascript"></script>
-        <script src="button.js" type="text/javascript"></script>
-        <script src="agePrompt.js" type="text/javascript"></script>   -->
         <script src="script.js" type="text/javascript"></script>
         <script src="p5.min.js" type="text/javascript"></script> 
         <script src="sketch.js" type="text/javascript"></script>
-
     </footer>
 </html>
